dim quote when refreshing

--- a/src/templates/quote.html.template
+++ b/src/templates/quote.html.template
@@ -6,7 +6,7 @@
 var prev_id = -1
 var id = -1;
 function getQuote() {
-  document.getElementById('quote').style.display = "none";
+  document.getElementById('quote').style.opacity = 0.5;
   var xmlhttp = new XMLHttpRequest();
   xmlhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
@@ -15,7 +15,7 @@ function getQuote() {
       if (id !== prev_id || id === 0) {
         document.getElementById('quotetext').innerText = myArr[1].replace(/&nbsp;/g, String.fromCharCode(160));
         document.getElementById('quoteauthor').innerText = "\n— " + myArr[2];
-        document.getElementById('quote').style.display = "table-cell";
+        document.getElementById('quote').style.opacity = 1;
       } else {
         getQuote();
       }
