--- a/src/templates/header.1.html.template
+++ b/src/templates/header.1.html.template
@@ -8,9 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no">
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" media="only screen" href="/styles/lektorkavpraze-common6.css">
-  <link rel="stylesheet" media="only screen and (min-width: 1200px)" href="/styles/lektorkavpraze-wide6.css">
-  <link rel="stylesheet" media="only screen and (max-width: 1199px)" href="/styles/lektorkavpraze-narrow6.css" />
+  <link rel="stylesheet" media="only screen" href="/styles/common.css?stamp=##STAMP##">
+  <link rel="stylesheet" media="only screen and (min-width: 1200px)" href="/styles/wide.css?stamp=##STAMP##">
+  <link rel="stylesheet" media="only screen and (max-width: 1199px)" href="/styles/narrow.css?stamp=##STAMP##" />
   <link href="/images/lektorkavpraze-favicon.png" rel="icon" type="image/png" />
   <script>
     function toggleTheme() {
@@ -30,7 +30,7 @@
           var cssNode = document.createElement('link');
           cssNode.type = 'text/css';
           cssNode.rel = 'stylesheet';
-          cssNode.href = '/styles/lektorkavpraze-dark.css';
+          cssNode.href = '/styles/dark.css?stamp=##STAMP##';
           cssNode.media = 'screen';
           headID.appendChild(cssNode);
         }
