--- a/src/templates/quote.html.template
+++ b/src/templates/quote.html.template
@@ -10,9 +10,7 @@ function getQuote() {
   document.getElementById('quote').addEventListener("mouseover", function() {
     document.getElementById('quote').style.backgroundImage = "url('/images/spin.svg')";
   }, false);
-  document.getElementById('quote').addEventListener("mouseout", function() {
-    document.getElementById('quote').style.backgroundImage = "none";
-  }, false);
+  document.getElementById('quote').style.backgroundImage = "url('/images/spin.svg')";
   var xmlhttp = new XMLHttpRequest();
   xmlhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
