--- a/src/templates/quote.html.template
+++ b/src/templates/quote.html.template
@@ -26,6 +26,7 @@ function getQuote() {
         document.getElementById('quote').addEventListener("mouseout", function() {
           document.getElementById('quote').style.backgroundImage = "none";
         }, false);
+        document.getElementById('quote').style.backgroundImage = "none";
       } else {
         getQuote();
       }
