3case_stůl_corrected

--- a/src/apps/anglictina-zakladni-gramatika.yaml
+++ b/src/apps/anglictina-zakladni-gramatika.yaml
@@ -117,7 +117,7 @@ room2:
 - {CZ: piana, EN: the piano}
 
 room3:
-- {CZ: stole, EN: the table}
+- {CZ: stolu, EN: the table}
 - {CZ: knihovně, EN: the bookcase}
 - {CZ: pianu, EN: the piano}
 
