--- a/src/apps/anglictina-zakladni-gramatika.yaml
+++ b/src/apps/anglictina-zakladni-gramatika.yaml
@@ -72,6 +72,51 @@ had:
 - {CZ: vy jste měli, EN: you had(formal or more people)}
 - {CZ: oni měli, EN: they had}
 
+bepastplace:
+- {CZ: Byl/a jsem tady, EN: I was here}
+- {CZ: Nebyl/a jsem tady, EN: I wasn't here}
+- {CZ: ty jsi byl/a tady, EN: you were here}
+- {CZ: ty jsi nebyl/a tady, EN: you weren't here}
+- {CZ: on byl tady, EN: he was here}
+- {CZ: on nebyl tady, EN: he wasn't here}
+- {CZ: ona byla tady, EN: she was here}
+- {CZ: ona nebyla tady, EN: she wasn't here}
+- {CZ: bylo to tady, EN: it was here}
+- {CZ: nebylo to tady, EN: it wasn't here}
+- {CZ: my jsme tady nebyli, EN: we were here}
+- {CZ: my jsme tady byli, EN: we weren't here}
+- {CZ: vy jste tady byli, EN: you were here(formal or more people)}
+- {CZ: vy jste tady nebyli, EN: you weren't here (formal or more people)}
+- {CZ: oni tady byli, EN: they were here}
+- {CZ: oni tady nebyli tady, EN: they weren't here}
+- {CZ: Byl/a jsem tam, EN: I was here}
+- {CZ: Nebyl/a jsem tam, EN: I wasn't there}
+- {CZ: ty jsi tam byl/a, EN: you were there}
+- {CZ: ty jsi tam nebyl/a, EN: you weren't there}
+- {CZ: on tam byl, EN: he was there}
+- {CZ: on tam nebyl, EN: he wasn't there}
+- {CZ: ona tam byla, EN: she was there}
+- {CZ: ona tam nebyla, EN: she wasn't there}
+- {CZ: my jsme tam nebyli, EN: we were there}
+- {CZ: my jsme tam byli, EN: we weren't there}
+- {CZ: vy jste tam byli, EN: you were there (formal or more people)}
+- {CZ: vy jste tam nebyli, EN: you weren't there (formal or more people)}
+- {CZ: oni tam byli, EN: they were there}
+- {CZ: oni tam nebyli, EN: they weren't there}
+
+bepastnext:
+- {CZ: včera, EN: yesterday}
+- {CZ: v pondělí, EN: on Monday}
+- {CZ: v roce 2005, EN: in 2005}
+- {CZ: v lednu, EN: in January}
+- {CZ: v půl osmé, EN: at half past eight}
+- {CZ: před rokem, EN: an hour ago}
+- {CZ: před pěti měsíci, EN: five months ago}
+- {CZ: před dvěma hodinami, EN: two hours ago}
+- {CZ: před lety, EN: years ago}
+- {CZ: dávno, EN: a long time ago}
+
+
 live:
 - {CZ: Já žiju, EN: I live}
 - {CZ: Já nežiju, EN: I don't live}
@@ -120,7 +165,6 @@ livenext:
 - {CZ: v Itálii, EN: in Italy}
 - {CZ: v Polsku, EN: in Poland}
 - {CZ: v Chorvatsku, EN: in Croatia}
-
 
 howareyou:
 - {CZ: mám, EN: am I}
@@ -226,7 +270,6 @@ town7:
 - {CZ: kostelem, EN: the church}
 
 
-
 templates:
 - ["[be:CZ] [benext:CZ].","[be:EN] [benext:EN]."]
 - ["[be:EN] [benext:EN].","[be:CZ] [benext:CZ]."]
@@ -240,12 +283,12 @@ templates:
 - ["Who [beq:EN]?", "Kdo [beq:CZ]?"]
 - ["Kdo [beq:CZ]?", "Who [beq:EN]?"]
 - ["Jak se [howareyou:CZ]?","How [howareyou:EN]?"]
-- ["How are [howareyou:EN]?","Jak se [howareyou:CZ]?"]
+- ["How are [howareyou:EN]?","Jak se [howareyou:EN]?"]
 - ["Jaké je [pronounsing:CZ] jméno?","What is [pronounsing:EN] name?"]
 - ["What is [pronounsing:EN] name?","Jaké je [pronounsing:CZ] jméno?"]
 - ["What is [pronounsing:EN] name?","Jaké je [pronounsing:CZ] jméno?"]
 - ["[persons:EN] [has (got) [havenext:EN].","[persons:CZ] má [havenext:CZ]."]
-- ["[persons:CZ] má [havenext:CZ].","[personsnext:EN] [has (got) [havenext:EN]."]
+- ["[persons:CZ] má [havenext:CZ].","[persons:EN] [has (got) [havenext:EN]."]
 - ["[persons:EN] [hasn't got [havenext:EN].","[persons:CZ] nemá [havenext:CZ]."]
 - ["[persons:CZ] nemá [havenext:CZ].","[persons:EN] [hasn't got [havenext:EN]."]
 - ["There is [townsub:EN] [prep2:EN] [town2:EN].", "[prep2:CZ] [town2:CZ] je [townsub:CZ]."]
@@ -278,4 +321,7 @@ templates:
 - ["[beqpast:CZ] [benext:CZ]?","[beqpast:EN] [benext:EN]?"]
 - ["[had:CZ] [havenext:CZ].","[had:EN] [havenext:EN]."]
 - ["[had:EN] [havenext:EN].","[had:CZ] [havenext:CZ]."]
+- ["[bepastplace:CZ] [bepastnext:CZ].","[bepastplace:EN] [bepastnext:EN]."]
+- ["[bepastplace:EN] [bepastnext:EN].","[bepastplace:CZ] [bepastnext:CZ]."]
+
 
