--- a/src/apps/anglictina-zakladni-gramatika.yaml
+++ b/src/apps/anglictina-zakladni-gramatika.yaml
@@ -27,8 +27,8 @@ bepast:
 - {CZ: ona nebyla, EN: she wasn't}
 - {CZ: bylo to, EN: it was}
 - {CZ: nebylo to, EN: it wasn't}
-- {CZ: my jsme nebyli, EN: we were}
-- {CZ: my jsme byli, EN: we weren't}
+- {CZ: my jsme byli, EN: we were}
+- {CZ: my jsme nebyli, EN: we weren't}
 - {CZ: vy jste byli, EN: you were (formal or more people)}
 - {CZ: vy jste nebyli, EN: you weren't (formal or more people)}
 - {CZ: oni byli, EN: they were}
@@ -83,8 +83,8 @@ bepastplace:
 - {CZ: ona nebyla tady, EN: she wasn't here}
 - {CZ: bylo to tady, EN: it was here}
 - {CZ: nebylo to tady, EN: it wasn't here}
-- {CZ: my jsme tady nebyli, EN: we were here}
-- {CZ: my jsme tady byli, EN: we weren't here}
+- {CZ: my jsme tady byli, EN: we were here}
+- {CZ: my jsme tady nebyli, EN: we weren't here}
 - {CZ: vy jste tady byli, EN: you were here(formal or more people)}
 - {CZ: vy jste tady nebyli, EN: you weren't here (formal or more people)}
 - {CZ: oni tady byli, EN: they were here}
