--- a/src/apps/anglictina-zakladni-gramatika.yaml
+++ b/src/apps/anglictina-zakladni-gramatika.yaml
@@ -27,8 +27,8 @@ bepast:
 - {CZ: ona nebyla, EN: she wasn't}
 - {CZ: bylo to, EN: it was}
 - {CZ: nebylo to, EN: it wasn't}
-- {CZ: my jsme byli, EN: we were}
-- {CZ: my jsme nebyli, EN: we weren't}
+- {CZ: my jsme nebyli, EN: we were}
+- {CZ: my jsme byli, EN: we weren't}
 - {CZ: vy jste byli, EN: you were (formal or more people)}
 - {CZ: vy jste nebyli, EN: you weren't (formal or more people)}
 - {CZ: oni byli, EN: they were}
@@ -83,8 +83,8 @@ bepastplace:
 - {CZ: ona nebyla tady, EN: she wasn't here}
 - {CZ: bylo to tady, EN: it was here}
 - {CZ: nebylo to tady, EN: it wasn't here}
-- {CZ: my jsme tady byli, EN: we were here}
-- {CZ: my jsme tady nebyli, EN: we weren't here}
+- {CZ: my jsme tady nebyli, EN: we were here}
+- {CZ: my jsme tady byli, EN: we weren't here}
 - {CZ: vy jste tady byli, EN: you were here(formal or more people)}
 - {CZ: vy jste tady nebyli, EN: you weren't here (formal or more people)}
 - {CZ: oni tady byli, EN: they were here}
@@ -150,6 +150,12 @@ persons:
 - {CZ: tvůj táta, EN: your father}
 - {CZ: jeho učitel, EN: his teacher}
 - {CZ: její bratr, EN: her brother}
+- {CZ: náš táta, EN: our dad}
+- {CZ: vaše babička, EN: your grandmother}
+- {CZ: jejich kamarád, EN: their friend}
+- {CZ: Robert, EN: Robert}
+- {CZ: Sandra, EN: Sandra}
+
 
 
 livenext:
@@ -197,6 +203,9 @@ from:
 - {CZ: z Itálie, EN: from Italy}
 - {CZ: z Francie, EN: from France}
 - {CZ: z Maďarska, EN: from Hungary}
+- {CZ: z Ruska, EN: from Russia}
+- {CZ: z Polska, EN: from Poland}
+
 
 havenext:
 - {CZ: auto, EN: a car}
@@ -269,6 +278,20 @@ town7:
 - {CZ: školou, EN: the school}
 - {CZ: kostelem, EN: the church}
 
+can1:
+- {CZ: umí hrát na piano, EN: can play the piano}
+- {CZ: může odejít, EN: can leave}
+- {CZ: nemůže přijít, EN: can't come}
+- {CZ: to nemůže najít, EN: can't find it}
+- {CZ: nám může pomoci, EN: can help us}
+
+cannext:
+- {CZ: napsat email, EN: write an email}
+- {CZ: zavolat policii, EN: call the police}
+- {CZ: být v sobotu doma, EN: be at home on Saturday}
+- {CZ: uvařit oběd, EN: cook lunch}
+- {CZ: jít domů, EN: go home}
+
 
 templates:
 - ["[be:CZ] [benext:CZ].","[be:EN] [benext:EN]."]
@@ -323,5 +346,9 @@ templates:
 - ["[had:EN] [havenext:EN].","[had:CZ] [havenext:CZ]."]
 - ["[bepastplace:CZ] [bepastnext:CZ].","[bepastplace:EN] [bepastnext:EN]."]
 - ["[bepastplace:EN] [bepastnext:EN].","[bepastplace:CZ] [bepastnext:CZ]."]
+- ["[persons:CZ] [can1:CZ].","[persons:EN] [can1:EN]."]
+- ["[persons:EN] [can1:EN].","[persons:CZ] [can1:CZ]."]
+- ["Může [persons:CZ] [cannext:CZ]?","Can [persons:EN] [cannext:EN]?"]
+- ["Can [persons:EN] [cannext:EN]?","Může [persons:CZ] [cannext:CZ]?"]
 
 
