--- a/src/apps/anglictina-zakladni-gramatika.yaml
+++ b/src/apps/anglictina-zakladni-gramatika.yaml
@@ -305,7 +305,7 @@ templates:
 - ["Who [beq:EN]?", "Kdo [beq:CZ]?"]
 - ["Kdo [beq:CZ]?", "Who [beq:EN]?"]
 - ["Jak se [howareyou:CZ]?","How [howareyou:EN]?"]
-- ["How [howareyou:EN]?","Jak se [howareyou:EN]?"]
+- ["How [howareyou:EN]?","Jak se [howareyou:CZ]?"]
 - ["Jaké je [pronounsing:CZ] jméno?","What is [pronounsing:EN] name?"]
 - ["What is [pronounsing:EN] name?","Jaké je [pronounsing:CZ] jméno?"]
 - ["What is [pronounsing:EN] name?","Jaké je [pronounsing:CZ] jméno?"]
@@ -349,379 +349,7 @@ templates:
 - ["[persons:EN] [can1:EN].","[persons:CZ] [can1:CZ]."]
 - ["Může [persons:CZ] [cannext:CZ]?","Can [persons:EN] [cannext:EN]?"]
 - ["Can [persons:EN] [cannext:EN]?","Může [persons:CZ] [cannext:CZ]?"]
-be:
-- {CZ: já jsem, EN: I am}
-- {CZ: já nejsem, EN: I am not}
-- {CZ: ty jsi, EN: You are}
-- {CZ: ty nejsi, EN: you aren't}
-- {CZ: on je, EN: he is}
-- {CZ: on není, EN: he isn't}
-- {CZ: ona je, EN: she is}
-- {CZ: ona není, EN: she isn't}
-- {CZ: to je, EN: it is}
-- {CZ: to není, EN: it isn't}
-- {CZ: my jsme, EN: we are}
-- {CZ: my nejsme, EN: we aren't}
-- {CZ: vy jste, EN: you are (formal or more people)}
-- {CZ: vy nejste, EN: you aren't (formal or more people)}
-- {CZ: oni jsou, EN: they are}
-- {CZ: oni nejsou, EN: they aren't}
 
-bepast:
-- {CZ: Byl/a jsem, EN: I was}
-- {CZ: Nebyl/a jsem, EN: I wasn't}
-- {CZ: ty jsi byl/a, EN: You were}
-- {CZ: ty jsi nebyl/a, EN: you weren't}
-- {CZ: on byl, EN: he was}
-- {CZ: on nebyl, EN: he wasn't}
-- {CZ: ona byla, EN: she was}
-- {CZ: ona nebyla, EN: she wasn't}
-- {CZ: bylo to, EN: it was}
-- {CZ: nebylo to, EN: it wasn't}
-- {CZ: my jsme nebyli, EN: we were}
-- {CZ: my jsme byli, EN: we weren't}
-- {CZ: vy jste byli, EN: you were (formal or more people)}
-- {CZ: vy jste nebyli, EN: you weren't (formal or more people)}
-- {CZ: oni byli, EN: they were}
-- {CZ: oni nebyli, EN: they weren't}
-
-beqpast:
-- {CZ: byl/a jsem, EN: was I}
-- {CZ: byl/a jsi, EN: were you (informal)}
-- {CZ: byl, EN: was he}
-- {CZ: byla, EN: was she}
-- {CZ: bylo to, EN: was it}
-- {CZ: byli jsme, EN: were we}
-- {CZ: byli jste, EN: were you (formal or more people)}
-- {CZ: byli, EN: were they}
-
-beq:
-- {CZ: jsem, EN: am I}
-- {CZ: jsi, EN: are you (informal)}
-- {CZ: je on, EN: is he}
-- {CZ: je ona, EN: is she}
-- {CZ: je to, EN: is it}
-- {CZ: jsme, EN: are we}
-- {CZ: jste, EN: are you (formal or more people)}
-- {CZ: jsou, EN: are they}
-
-have:
-- {CZ: já mám, EN: I have}
-- {CZ: ty máš, EN: you have}
-- {CZ: on má, EN: he has}
-- {CZ: ona má, EN: she has}
-- {CZ: my máme, EN: we have}
-- {CZ: vy máte, EN: you have(formal or more people)}
-- {CZ: oni mají, EN: they have}
-
-had:
-- {CZ: já jsem měl/a, EN: I had}
-- {CZ: ty jsi měl/a, EN: you had}
-- {CZ: on měl, EN: he had}
-- {CZ: ona měla, EN: she had}
-- {CZ: my jsme měli, EN: we had}
-- {CZ: vy jste měli, EN: you had(formal or more people)}
-- {CZ: oni měli, EN: they had}
-
-bepastplace:
-- {CZ: Byl/a jsem tady, EN: I was here}
-- {CZ: Nebyl/a jsem tady, EN: I wasn't here}
-- {CZ: ty jsi byl/a tady, EN: you were here}
-- {CZ: ty jsi nebyl/a tady, EN: you weren't here}
-- {CZ: on byl tady, EN: he was here}
-- {CZ: on nebyl tady, EN: he wasn't here}
-- {CZ: ona byla tady, EN: she was here}
-- {CZ: ona nebyla tady, EN: she wasn't here}
-- {CZ: bylo to tady, EN: it was here}
-- {CZ: nebylo to tady, EN: it wasn't here}
-- {CZ: my jsme tady nebyli, EN: we were here}
-- {CZ: my jsme tady byli, EN: we weren't here}
-- {CZ: vy jste tady byli, EN: you were here(formal or more people)}
-- {CZ: vy jste tady nebyli, EN: you weren't here (formal or more people)}
-- {CZ: oni tady byli, EN: they were here}
-- {CZ: oni tady nebyli tady, EN: they weren't here}
-- {CZ: Byl/a jsem tam, EN: I was here}
-- {CZ: Nebyl/a jsem tam, EN: I wasn't there}
-- {CZ: ty jsi tam byl/a, EN: you were there}
-- {CZ: ty jsi tam nebyl/a, EN: you weren't there}
-- {CZ: on tam byl, EN: he was there}
-- {CZ: on tam nebyl, EN: he wasn't there}
-- {CZ: ona tam byla, EN: she was there}
-- {CZ: ona tam nebyla, EN: she wasn't there}
-- {CZ: my jsme tam nebyli, EN: we were there}
-- {CZ: my jsme tam byli, EN: we weren't there}
-- {CZ: vy jste tam byli, EN: you were there (formal or more people)}
-- {CZ: vy jste tam nebyli, EN: you weren't there (formal or more people)}
-- {CZ: oni tam byli, EN: they were there}
-- {CZ: oni tam nebyli, EN: they weren't there}
-
-pastnext:
-- {CZ: včera, EN: yesterday}
-- {CZ: v pondělí, EN: on Monday}
-- {CZ: v roce 2005, EN: in 2005}
-- {CZ: v lednu, EN: in January}
-- {CZ: v půl osmé, EN: at half past eight}
-- {CZ: před rokem, EN: an hour ago}
-- {CZ: před pěti měsíci, EN: five months ago}
-- {CZ: před dvěma hodinami, EN: two hours ago}
-- {CZ: před lety, EN: years ago}
-- {CZ: dávno, EN: a long time ago}
-
-pastir:
-- {CZ: Viděla jsem ho, EN: I saw him}
-- {CZ: Koupil si to, EN: You bought it}
-- {CZ: Prodal to auto, EN: He sold the car}
-- {CZ: Potkala ho, EN: She met him}
-- {CZ: Zjistili jsme to, EN: We found out}
-
-
-pastnext:
-- {CZ: včera, EN: yesterday}
-- {CZ: v pondělí, EN: on Monday}
-- {CZ: v roce 2005, EN: in 2005}
-- {CZ: v lednu, EN: in January}
-- {CZ: v půl osmé, EN: at half past eight}
-- {CZ: před rokem, EN: an hour ago}
-- {CZ: před pěti měsíci, EN: five months ago}
-- {CZ: před dvěma hodinami, EN: two hours ago}
-- {CZ: před lety, EN: years ago}
-
-
-live:
-- {CZ: Já žiju, EN: I live}
-- {CZ: Já nežiju, EN: I don't live}
-- {CZ: Ty žiješ, EN: You live (informal)}
-- {CZ: Ty nežiješ, EN: You don't live (informal)}
-- {CZ: On žije, EN: He lives}
-- {CZ: On nežije, EN: He doesn't live}
-- {CZ: Ona žije, EN: She lives}
-- {CZ: Ona nežije, EN: She doesn't live}
-- {CZ: My žijeme, EN: We live}
-- {CZ: My nežijeme, EN: We don't live}
-- {CZ: Vy žijete (množné), EN: You live (more people)}
-- {CZ: Vy nežijete (množné), EN: You don't live (more people)}
-- {CZ: Vy žijete (vykání), EN: You live (formal)}
-- {CZ: Vy nežijete (vykání), EN: You don't live (formal)}
-- {CZ: Oni žijí, EN: They live}
-- {CZ: Oni nežijí, EN: They don't live}
-
-liveq:
-- {CZ: žiju, EN: Do I live}
-- {CZ: žiješ, EN: Do you live (informal)}
-- {CZ: žije (on), EN: Does he live}
-- {CZ: žije (ona), EN: Does she live}
-- {CZ: žijeme, EN: Do we live}
-- {CZ: žijete (množné), EN: Do you live (more people)}
-- {CZ: žijete (vykání), EN: Do you live (formal)}
-- {CZ: žijí, EN: Do they live}
-
-persons:
-- {CZ: moje máma, EN: my mother}
-- {CZ: tvůj táta, EN: your father}
-- {CZ: jeho učitel, EN: his teacher}
-- {CZ: její bratr, EN: her brother}
-- {CZ: náš táta, EN: our dad}
-- {CZ: vaše babička, EN: your grandmother}
-- {CZ: jejich kamarád, EN: their friend}
-- {CZ: Robert, EN: Robert}
-- {CZ: Sandra, EN: Sandra}
-
-
-
-livenext:
-- {CZ: v Praze, EN: in Prague}
-- {CZ: v České republice, EN: in the Czech Republic}
-- {CZ: v Německu, EN: in Germany}
-- {CZ: v Anglii, EN: in England}
-- {CZ: tady, EN: here}
-- {CZ: na Slovensku, EN: in Slovakia}
-- {CZ: ve Francii, EN: in France}
-- {CZ: v Maďarsku, EN: in Hungary}
-- {CZ: ve Španělsku, EN: in Spain}
-- {CZ: v Itálii, EN: in Italy}
-- {CZ: v Polsku, EN: in Poland}
-- {CZ: v Chorvatsku, EN: in Croatia}
-
-howareyou:
-- {CZ: mám, EN: am I}
-- {CZ: máš, EN: are you (informal)}
-- {CZ: má (on), EN: is he}
-- {CZ: má (ona), EN: is she}
-- {CZ: máme, EN: are we}
-- {CZ: máte, EN: are you (formal or more people)}
-- {CZ: mají, EN: are they}
-
-benext:
-- {CZ: v Praze, EN: in Prague}
-- {CZ: ve Španělsku, EN: in Spain}
-- {CZ: v Německu, EN: in Germany}
-- {CZ: doma, EN: at home}
-- {CZ: v práci, EN: at work}
-
-pronounsing:
-- {CZ: moje, EN: my}
-- {CZ: tvoje, EN: your (informal)}
-- {CZ: jeho, EN: his}
-- {CZ: Vaše, EN: your (formal or more people)}
-
-from:
-- {CZ: z České republiky, EN: from the Czech Republic}
-- {CZ: z Německa, EN: from  Germany}
-- {CZ: ze Slovenska, EN: from Slovakia}
-- {CZ: z Rakouska, EN: from Austria}
-- {CZ: ze Španělska, EN: from Spain}
-- {CZ: z Itálie, EN: from Italy}
-- {CZ: z Francie, EN: from France}
-- {CZ: z Maďarska, EN: from Hungary}
-- {CZ: z Ruska, EN: from Russia}
-- {CZ: z Polska, EN: from Poland}
-
-
-havenext:
-- {CZ: auto, EN: a car}
-- {CZ: dům, EN: a house}
-- {CZ: psa, EN: a dog}
-- {CZ: kočku, EN: a cat}
-- {CZ: dceru, EN: a daughter}
-- {CZ: syna, EN: a son}
-- {CZ: banán, EN: a banana}
-- {CZ: jablko, EN: an apple}
-- {CZ: počítač, EN: a computer}
-- {CZ: knihu, EN: a book}
-
-townsub:
-- {CZ: hotel, EN: a hotel}
-- {CZ: restaurace, EN: a restaurant}
-- {CZ: lékárna, EN: a pharmacy}
-- {CZ: pošta, EN: a post office}
-- {CZ: nemocnice, EN: a hospital}
-
-roomsub:
-- {CZ: židle, EN: a chair}
-- {CZ: postel, EN: a bed}
-- {CZ: šatní skříň, EN: a wardrobe}
-
-prep2:
-- {CZ: vedle, EN: near}
-
-prep3:
-- {CZ: naproti, EN: opposite}
-
-prep7:
-- {CZ: před, EN: in front of}
-- {CZ: za, EN: behind}
-
-room2:
-- {CZ: stolu, EN: the table}
-- {CZ: knihovny, EN: the bookcase}
-- {CZ: piana, EN: the piano}
-
-room3:
-- {CZ: stole, EN: the table}
-- {CZ: knihovně, EN: the bookcase}
-- {CZ: pianu, EN: the piano}
-
-room7:
- - {CZ: stolem, EN: the table}
- - {CZ: knihovnou, EN: the bookcase}
- - {CZ: pianem, EN: the piano}
-
-
-town2:
-- {CZ: banky, EN: the bank}
-- {CZ: supermarketu, EN: the supermarket}
-- {CZ: parku, EN: the park}
-- {CZ: školy, EN: the school}
-- {CZ: kostela, EN: the church}
-
-town3:
-- {CZ: bance, EN: the bank}
-- {CZ: supermarketu, EN: the supermarket}
-- {CZ: parku, EN: the park}
-- {CZ: škole, EN: the school}
-- {CZ: kostelu, EN: the church}
-
-town7:
-- {CZ: bankou, EN: the bank}
-- {CZ: supermarketem, EN: the supermarket}
-- {CZ: parkem, EN: the park}
-- {CZ: školou, EN: the school}
-- {CZ: kostelem, EN: the church}
-
-can1:
-- {CZ: umí hrát na piano, EN: can play the piano}
-- {CZ: může odejít, EN: can leave}
-- {CZ: nemůže přijít, EN: can't come}
-- {CZ: to nemůže najít, EN: can't find it}
-- {CZ: nám může pomoci, EN: can help us}
-
-cannext:
-- {CZ: napsat email, EN: write an email}
-- {CZ: zavolat policii, EN: call the police}
-- {CZ: být v sobotu doma, EN: be at home on Saturday}
-- {CZ: uvařit oběd, EN: cook lunch}
-- {CZ: jít domů, EN: go home}
-
-
-templates:
-- ["[be:CZ] [benext:CZ].","[be:EN] [benext:EN]."]
-- ["[be:EN] [benext:EN].","[be:CZ] [benext:CZ]."]
-- ["[beq:EN] [benext:EN]?","[beq:CZ] [benext:CZ]?"]
-- ["[beq:CZ] [benext:CZ]?","[beq:EN] [benext:EN]?"]
-- ["Odkud [beq:CZ]?","Where [beq:EN] from?"]
-- ["Where [beq:EN] from?","[Odkud [beq:CZ]?"]
-- ["[be:CZ] [from:CZ].","[be:EN] [from:EN]."]
-- ["[be:EN] [from:EN].","[be:CZ] [from:CZ]."]
-- ["Kde [beq:CZ]?", "Where [beq:EN]?"]
-- ["Who [beq:EN]?", "Kdo [beq:CZ]?"]
-- ["Kdo [beq:CZ]?", "Who [beq:EN]?"]
-- ["Jak se [howareyou:CZ]?","How [howareyou:EN]?"]
-- ["How are [howareyou:EN]?","Jak se [howareyou:EN]?"]
-- ["Jaké je [pronounsing:CZ] jméno?","What is [pronounsing:EN] name?"]
-- ["What is [pronounsing:EN] name?","Jaké je [pronounsing:CZ] jméno?"]
-- ["What is [pronounsing:EN] name?","Jaké je [pronounsing:CZ] jméno?"]
-- ["[persons:EN] [has (got) [havenext:EN].","[persons:CZ] má [havenext:CZ]."]
-- ["[persons:CZ] má [havenext:CZ].","[persons:EN] [has (got) [havenext:EN]."]
-- ["[persons:EN] [hasn't got [havenext:EN].","[persons:CZ] nemá [havenext:CZ]."]
-- ["[persons:CZ] nemá [havenext:CZ].","[persons:EN] [hasn't got [havenext:EN]."]
-- ["There is [townsub:EN] [prep2:EN] [town2:EN].", "[prep2:CZ] [town2:CZ] je [townsub:CZ]."]
-- ["[prep2:CZ] [town2:CZ] je [townsub:CZ].", "There is [townsub:EN] [prep2:EN] [town2:EN]."]
-- ["There is [townsub:EN] [prep3:EN] [town3:EN].", "[prep3:CZ] [town3:CZ] je [townsub:CZ]."]
-- ["[prep3:CZ] [town3:CZ] je [townsub:CZ].", "There is [townsub:EN] [prep3:EN] [town3:EN]."]
-- ["There is [townsub:EN] [prep7:EN] [town7:EN].", "[prep7:CZ] [town7:CZ] je [townsub:CZ]."]
-- ["[prep7:CZ] [town7:CZ] je [townsub:CZ].", "There is [townsub:EN] [prep7:EN] [town7:EN]."]
-- ["There is [roomsub:EN] [prep2:EN] [room2:EN].", "[prep2:CZ] [room2:CZ] je [roomsub:CZ]."]
-- ["[prep2:CZ] [room2:CZ] je [roomsub:CZ].", "There is [roomsub:EN] [prep2:EN] [room2:EN]."]
-- ["There is [roomsub:EN] [prep3:EN] [room3:EN].", "[prep3:CZ] [room3:CZ] je [roomsub:CZ]."]
-- ["[prep3:CZ] [room3:CZ] je [roomsub:CZ].", "There is [roomsub:EN] [prep3:EN] [room3:EN]."]
-- ["There is [roomsub:EN] [prep7:EN] [room7:EN].", "[prep7:CZ] [room7:CZ] je [roomsub:CZ]."]
-- ["[prep7:CZ] [room7:CZ] je [roomsub:CZ].", "There is [roomsub:EN] [prep7:EN] [room7:EN]."]
-- ["[live:CZ] [livenext:CZ].", "[live:EN] [livenext:EN]."]
-- ["[live:EN] [livenext:EN].", "[live:CZ] [livenext:CZ]."]
-- ["[persons:CZ] žije [livenext:CZ].", "[persons:EN] lives [livenext:EN]."]
-- ["[persons:EN] lives [livenext:EN].", "[persons:CZ] žije [livenext:CZ]."]
-- ["[persons:CZ] nežije [livenext:CZ].", "[persons:EN] doesn't live [livenext:EN]."]
-- ["[persons:EN] doesn't live [livenext:EN].", "[persons:CZ] nežije [livenext:CZ]."]
-- ["[liveq:CZ] [livenext:CZ]?", "[liveq:EN] [livenext:EN]?"]
-- ["[liveq:EN] [livenext:EN]?", "[liveq:CZ] [livenext:CZ]?"]
-- ["[liveq:CZ] [livenext:CZ]?", "[liveq:EN] [livenext:EN]?"]
-- ["[liveq:EN] [livenext:EN]?", "[liveq:CZ] [livenext:CZ]?"]
-- ["Žije [persons:CZ] [livenext:CZ]?", "Does [persons:EN] live [livenext:EN]?"]
-- ["Does [persons:EN] live [livenext:EN]?","Žije [persons:CZ] [livenext:CZ]?"]
-- ["[bepast:CZ] [benext:CZ].","[bepast:EN] [benext:EN]."]
-- ["[bepast:EN] [benext:EN].","[bepast:CZ] [benext:CZ]."]
-- ["[beqpast:EN] [benext:EN]?","[beqpast:CZ] [benext:CZ]?"]
-- ["[beqpast:CZ] [benext:CZ]?","[beqpast:EN] [benext:EN]?"]
-- ["[had:CZ] [havenext:CZ].","[had:EN] [havenext:EN]."]
-- ["[had:EN] [havenext:EN].","[had:CZ] [havenext:CZ]."]
-- ["[bepastplace:CZ] [pastnext:CZ].","[bepastplace:EN] [pastnext:EN]."]
-- ["[bepastplace:EN] [pastnext:EN].","[bepastplace:CZ] [pastnext:CZ]."]
-- ["[persons:CZ] [can1:CZ].","[persons:EN] [can1:EN]."]
-- ["[persons:EN] [can1:EN].","[persons:CZ] [can1:CZ]."]
-- ["Může [persons:CZ] [cannext:CZ]?","Can [persons:EN] [cannext:EN]?"]
-- ["Can [persons:EN] [cannext:EN]?","Může [persons:CZ] [cannext:CZ]?"]
-- ["[pastir:CZ]  [pastnext:CZ].","[pastir:EN] [pastnext:EN]."]
-- ["[pastir:EN]  [pastnext:EN].","[pastir:CZ] [pastnext:CZ]."]
 
 
 
